[tool.poetry]
name = "flwrex"
version = "0.1.0"
description = "Flower example with scalability on single GPU."
authors = ["Matthieu Moreau <matth.more@lilo.org>"]

[tool.poetry.dependencies]
python = "^3.8"
flwr = "^0.15.0"
torch = "^1.8.1"
numpy = "^1.20.2"
torchvision = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
